--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ img{
     position:absolute;
     z-index: -1;
     background-image: url("../img/Banner.jpg");
-    /*background-attachment: fixed;*/
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
     opacity: .4;
