Изменён путь к файлу для загрузки фона

--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ img{
 
 .services__title_pc{
     padding-top: 200px;
-    background-image: url("../img/pc.jpg");
+    background-image: url("../img/PC.jpg");
     background-position-x: center;
     background-repeat: no-repeat;
 }
