--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ img{
 
 .header__layout{
     display: flex;
-    /*flex-wrap: wrap;*/
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -291,8 +291,8 @@ img{
     content: '';
     position: absolute;
     left: 50%;
-    top: 129%;
-    transform: translateX(-50%);
+    top: 100%;
+    transform: translate(-50%, 65px);
     z-index: 1;
     border: 20px solid transparent;
     border-top: 40px solid #fff;
@@ -433,31 +433,6 @@ progress::-webkit-progress-value{
     position: relative;
     border: 0;
 }
-
-/*.contact__content:before{
-    content:"";
-    position:absolute;
-    z-index: -1;
-    background-image: url("../img/bg-city.jpg");
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 572px;
-}
-
-.contact__content:after{
-    content: "";
-    position: absolute;
-    z-index:-3;
-    top: 0%;
-    left: 0%;
-    background-color: #515151;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 572px;
-}*/
 
 .feedback{
     padding: 28px 10px 0;
