--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ h1,h2,h3{
     margin-bottom: 0;
 }
 
+ul{
+    font-family: Arial;
+}
+
 .title{
     text-transform: uppercase;
 }
@@ -184,7 +188,7 @@ a:focus, a:hover{
 }
 
 .services__title{
-    margin-bottom: 38px;
+    margin-bottom: 34px;
     font-size: 30px;
     font-weight: 700;
     color: #474747;
@@ -225,7 +229,7 @@ a:focus, a:hover{
 
 p{
     margin-top: 0;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     font-family: Arial;
 }
 
