--- a/css/style.less
+++ b/css/style.less
@@ -75,6 +75,7 @@ img{
 }
 
 .header__logo{
+    font-family: "Oswald";
     font-size: 70px;
     font-weight: 400;
     text-transform: uppercase;
@@ -181,7 +182,7 @@ a:focus, a:hover{
 }
 
 .button{
-    transition: all .5s ease-in-out;
+    transition: background .5s ease-in;
     font-weight: 700;
     color: #fff;
     background: #fd5433;
