Изменён блок с сервисами

--- a/css/style.less
+++ b/css/style.less
@@ -199,59 +199,55 @@ a:focus, a:hover{
     margin-top: 38px;
 }
 
-.services{
+.section__services{
+    padding-bottom: 81px;
     border-bottom: 1px solid #474444;
 }
 
 .section__title{
-    padding-bottom: 36px;
-    border-bottom: 1px solid #474444;
+    margin-bottom: 36px;
     text-align: center;
     font-weight: 700;
     color: #fd5433;
 }
 
 .section__content{
-    margin-top: 68px;
-    padding-bottom: 81px;
+    padding-top: 36px;
+    border-top: 1px solid #474444;
 }
 
-.services__title{
+.section__name{
     margin-bottom: 34px;
     font-size: 30px;
     font-weight: 700;
     color: #474747;
 }
 
-.services__branding, .services__design, .services__marketing{
+.section__branding, .section__design, .section__marketing{
     display: inline-block;
     vertical-align: bottom;
     width: 32%;
     text-align: center;
     padding-top: 200px;
     margin-right: 1%;
+    background-position-x: center;
+    background-repeat: no-repeat;
 }
 
-.services__branding{
+.section__branding{
     background-image: url("../img/PEN.jpg");
-    background-position-x: center;
-    background-repeat: no-repeat;
 }
 
-.services__design{
+.section__design{
     background-image: url("../img/PC.jpg");
-    background-position-x: center;
-    background-repeat: no-repeat;
 }
 
-.services__marketing{
+.section__marketing{
     background-image: url("../img/Mic.jpg");
-    background-position-x: center;
-    background-repeat: no-repeat;
     margin-right: 0;
 }
 
-.services__content{
+.section__services-content{
     width: 78%;
     margin: 0 auto;
 }
